# RobotCode2025

./: README.md
ros2_ws/: .gitignore  realsense_log.txt
ros2_ws/2025-08-15-09-29-33/: 2025-08-15-09-29-33_0.db3
ros2_ws/bash/: launch_qual_node.sh
ros2_ws/config/motor_config/: map_motors.py  motorconfig.csv
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/launch/: launch_PID_tuning.py  launch_all_sensors.py  launch_drive_motors.py  launch_heading_PID_tuning.py  launch_object_detection.py  launch_realsense_camera.py
ros2_ws/log/: latest_build
ros2_ws/motor_config/: map_motors.py
ros2_ws/src/: MOTOR_COMMANDS_GLOSSARY.MD  Navigator_Goals.md  Notes.md  TODO.md  USB_CAM_USAGE.md
ros2_ws/src/cpp_subcontroller/: CMakeLists.txt
ros2_ws/src/cpp_subcontroller/deprecated/: Navigator.cpp.bak  Navigator.cpp.bak2
ros2_ws/src/cpp_subcontroller/src/: MotionDirector.cpp  Navigator.cpp
ros2_ws/src/custom_interfaces/: CMakeLists.txt
ros2_ws/src/custom_interfaces/action/: NavigationGoal.action
ros2_ws/src/custom_interfaces/msg/: AABB.msg  HeadingResult.msg  WorldMap.msg
ros2_ws/src/custom_interfaces/srv/: DetectionService.srv  GenerateWorldMap.srv  SetHeading.srv
ros2_ws/src/py_motors/: setup.cfg  setup.py
ros2_ws/src/py_motors/py_motors/: MotorCommands.py  depth_controller.py  keyboard_input.py  motor_conductor.py  motor_controller.py
ros2_ws/src/py_objectdetection/: Pipeline.md  setup.cfg  setup.py
ros2_ws/src/py_objectdetection/py_objectdetection/: depth_image_filterer.py  (+3 more)
ros2_ws/src/py_sensors/: setup.py
ros2_ws/src/py_subcontroller/: setup.cfg  setup.py
ros2_ws/testing/: Test_Goal_07_24.md  Test_Goal_07_28.md  Test_Goal_08_04.md  Test_Goals_07_23.md
ros2_ws/testing/logs/: depth_controller_log.txt  depth_sensor_noise_log.txt
ros2_ws/typings/open3d/: __init__.pyi
(+304 files in other folders)
